--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p id = "yellow">Paragragh-1 </p>
+	
+	<p id = "red">Paragragh-2</p>
+
+	<p id = "green">Paragragh-3</p>
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
